--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+		<meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/png" href=""/>
+        <title>DelPhone</title>
+        <link href="style.css" rel="stylesheet">
+        <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+        <link rel="shortcut icon" href="img/logotipo.jpg">
+        <script src="bootstrap/bootstrap.min.js"></script>
+		<script src="bootstrap/bootstrap-grid.css"></script>
+<head>
 <h1>
 <center> Sobre nós </center>
 
@@ -15,32 +28,36 @@
 		
 <p>Uma equipe formada por 5 estudantes de graduação da FGV-EMAp, muito diferentes, compartilhando uma característica: ser incrivelmente sonhadores.</p>
 
-
-<p>(a ideia é que as descrições fiquem uma do lado da outra, com a fotinho em círculo)</p>
-
-		<div >
-		<h3> André Felipe (PR) </h3>
+		<div class = "container">
+			<div class = "row">
+				<div class = "col">
+		<img src="img/Andre.png">
+		<h5 class = "pessoas"> André Felipe (PR) </h5>
 		O sensato tradutor, que entende as loucuras do Darlan e as torna possíveis.
-		</div>
-		
-		<div >
-		<h3> Darlan Araújo (SP) </h3>
+				</div>
+				<div class="col">
+		<img src="img/Darlan.png">
+		<h5  class = "pessoas"> Darlan Araújo (SP) </h5 >
 		O hacker, para quê Stack Overflow quando se tem ele? 
-		</div>
-		
-		<div>
-		<h3> Letícia Brandão (DF) </h3>
+				</div>
+				<div class = "col">
+		<img src="img/Leticia.png">
+		<h5  class = "pessoas"> Letícia Brandão (DF) </h5 >
 		Nem ideia do que colocar aqui
-		</div>
+				</div>
 		
-		<div>
-		<h3> Paloma Borges (MG) </h3>
+				<div class = "col">
+		<img src="img/Paloma.png">
+		<h5 class = "pessoas"> Paloma Borges (MG) </h5 >
 		A empreendedora, mostra sempre uma nova visão das empresas e das necessidades delas.
-		</div>
+				</div>
 		
-		<div>
-		<h3> Pedro Garcia (AM) </h3>
+				<div class = "col">
+		<img src="img/Pedro.png">
+		<h5 class = "pessoas"> Pedro Garcia (AM) </h5>
 		O design gráfico, cria logos e define paletas, responsável pela identidade visual do projeto.
+				</div>
+			</div>
 		</div>
 		
 		
@@ -50,3 +67,5 @@
  
 	</article>
 </body>
+
+</html>
