--- a/faq.html
+++ b/faq.html
@@ -18,7 +18,10 @@
 		<h3>Como utilizar o DelPhone?</h3>
 			<p>Para utilizar nossa plataforma como cliente, basta informar sua localização e selecionar qual tipo de produto ou serviço deseja.</p>
 			<p>E pronto! Todos os contatos serão disponibilizados para que você contate a empresa que deseja.</p>
-			
+		
+		<h3>Preciso informar dados pessoais para utilizar o DelPhone?</h3>
+			<p>Não. Você precisa informar apenas sua cidade e estado para que tenha acesso aos contatos das empresas.</p>	
+	
 		<h3>Quais são os custos?</h3>
 			<p>O DelPhone é uma plataforma totalmente gratuita feita para conectar você, de forma simples e rápida, à empresas de delivery.</p>
 		
