--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,11 @@
 
         <div class="cabecalho">
             <div class="tiles">
-              <img src="img/DELPHONE.png">
+              <div class="center">
+                <img src="img/DELPHONE.png">
+                <img src="img/nome_sem_fundo.png"> 
+                <a class="restrito" href="#"><img style="width: 40px" src="img/cadeado.svg"></a>             
+              </div>
             </div>
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">MENU</a>
@@ -34,7 +38,10 @@
                       <a class="nav-link" href="#">CONTATOS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">QUEM NÓS SOMOS?</a>
+                      <a class="nav-link" href="#">QUEM SOMOS?</a>
+                    </li>
+                    <li class="cadastro">
+                      <a href="#">CADASTRAR</a>
                     </li>
                   </ul>
                 </div>
@@ -75,31 +82,30 @@
         </div>
 
         <div class="info space">
-            <h1>
-                DelPhone
-            </h1>
             <div class="hot_dog">
-                <img src="img/hot_dog.png">
+                <img src="img/celular_sem_fundo.png">
             </div>
-            <div class="text">
-                Lorem ipsum dolor sit amet consectetur adipiscing, elit vel commodo sollicitudin magnis fringilla lorem aliquet nam platea venenatis adipiscing fames tellus dictum pulvinav Libero penatibus urna ad nascetur montes platea litora vel.
-            </div>
+            <div class="text" align="right">
+              O objetivo desse website é facilitar o acesso aos contatos de delivery próximos ao usuário e ajudar na divulgação de empresas locais.            </div>
         </div>
 
         <div class="rodape space">
             <div class="toproda" align="center">
                 <div class="roda">
-                    <h2>Contato</h2>
+                    <h2>Redes Sociais</h2>
                     <img src="img/twiter.svg">
                     <img src="img/youtube.svg">
                     <img src="img/facebook.svg">
                     <img src="img/instagram.svg">
                 </div>
                 <div class="roda">
-                    <h2>Redes Sociais</h2> 
-                    <div class="redes">
-                        <p>emailaleatório@gmail.com</p>
-                    </div>
+                    <nav class="redes">
+                      <h2>Navegação</h2>
+                        <a href="#">Menu</a><br>
+                        <a href="#">Dúvidas frequentes</a><br>
+                        <a href="#">Contatos</a><br>
+                        <a href="#">Quem somos?</a>
+                    </nav>
                 </div>
             </div>
     
@@ -112,3 +118,35 @@
     </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
