--- a/como_funcionamos.html
+++ b/como_funcionamos.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-	<link rel="sortcut icon" href="DELPHONE.png" type="image/png" />
-    <title>DelPhone</title>
-    <link href="style/style_delphone.css" rel="stylesheet" />
-</head>
-<body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/png" href=""/>
+        <title>DelPhone</title>
+        <link href="front_end/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+        <link rel="shortcut icon" href="img/logotipo.jpg">
+        <script src="jquery/jquery.min.js"></script>
+        <script src="jquery/popper.min.js"></script>
+        <script src="front_end/interaction.js"></script>
+        <script src="bootstrap/bootstrap.min.js"></script>
+    </head>
+
+    <body>
+
+        <div class="cabecalho">
+            <div class="tiles">
+              <img src="img/DELPHONE.png">
+            </div>
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="#">MENU</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">DÚVIDAS FREQUENTES</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">CONTATOS</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">QUEM NÓS SOMOS?</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+        </div>
+	    
 	<h2>Como funcionamos?</h2>
 	
 		<h3>Dê sua localização</h3>
