--- a/faq.html
+++ b/faq.html
@@ -1,44 +1,107 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-	<link rel="sortcut icon" href="DELPHONE.png" type="image/png" />
-    <title>DelPhone</title>
-    <link href="style/style_delphone.css" rel="stylesheet" />
-</head>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/png" href=""/>
+        <title>DelPhone</title>
+        <link href="front_end/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+        <link rel="shortcut icon" href="img/logotipo.jpg">
+        <script src="jquery/jquery.min.js"></script>
+        <script src="jquery/popper.min.js"></script>
+        <script src="front_end/interaction.js"></script>
+        <script src="bootstrap/bootstrap.min.js"></script>
+    </head>
 
-<h1>
-<center> Perguntas Frequentes </center>
-</h1>
-
-<body>
-
-	<h2>Cliente</h2>
-	
-		<h3>Como utilizar o DelPhone?</h3>
-			<p>Para utilizar nossa plataforma como cliente, basta informar sua localização e selecionar qual tipo de produto ou serviço deseja.</p>
-			<p>E pronto! Todos os contatos serão disponibilizados para que você contate a empresa que deseja.</p>
+    <body>
+        <div class="cabecalho">
+            <div class="tiles">
+              <div class="center">
+                <img src="img/DELPHONE.png">
+                <img src="img/nome_sem_fundo.png"> 
+                <a class="restrito" href="#"><img style="width: 40px" src="img/cadeado.svg"></a>             
+              </div>
+            </div>
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="menu.html">MENU</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="faq.html">DÚVIDAS FREQUENTES</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">CONTATOS</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="sobre_nos.html">QUEM SOMOS?</a>
+                    </li>
+                    <li class="cadastro">
+                      <a href="#">CADASTRAR</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+        </div>
+        
+        <div class="conteudo">
+		<center>
+		<h1>Perguntas Frequentes</h1>
+		</center>
+                <h2>Cliente</h2>
+			<h3>Como utilizar o DelPhone?</h3>
+				<p>Para utilizar nossa plataforma como cliente, basta informar sua localização e selecionar qual tipo de produto ou serviço deseja.</p>
+				<p>E pronto! Todos os contatos serão disponibilizados para que você contate a empresa que deseja.</p>
 		
-		<h3>Preciso informar dados pessoais para utilizar o DelPhone?</h3>
-			<p>Não. Você precisa informar apenas sua cidade e estado para que tenha acesso aos contatos das empresas.</p>	
+			<h3>Preciso informar dados pessoais para utilizar o DelPhone?</h3>
+				<p>Não. Você precisa informar apenas sua cidade e estado para que tenha acesso aos contatos das empresas.</p>	
 	
-		<h3>Quais são os custos?</h3>
-			<p>O DelPhone é uma plataforma totalmente gratuita feita para conectar você, de forma simples e rápida, à empresas de delivery.</p>
+			<h3>Quais são os custos?</h3>
+				<p>O DelPhone é uma plataforma totalmente gratuita feita para conectar você, de forma simples e rápida, à empresas de delivery.</p>
 		
-		<h3>As empresas são confiáveis?</h3>
-			<p>Sim, todas as empresas indicadas em nossa plataforma são seguras e confiáveis. Antes de serem disponibilizadas no DelPhone, as empresas passam por uma análise criteriosa e confirmação dos dados.</p>
+			<h3>As empresas são confiáveis?</h3>
+				<p>Sim, todas as empresas indicadas em nossa plataforma são seguras e confiáveis. Antes de serem disponibilizadas no DelPhone, as empresas passam por uma análise criteriosa e confirmação dos dados.</p>
 	
-	<h2>Empresa</h2>
+		<h2>Empresa</h2>
 	
-		<h3>Como utilizar o DelPhone?</h3>
-			<p>Para utilizar o DelPhone como empresa, é necessário realizar o cadastro para empresas e esperar a análise de seus dados. Após analisado e confirmado, seu negócio será adicionado em nossa plataforma e já estará disponível para que potenciais clientes entrem em contato.</p>
-			<p>Mais detalhes e informações podem ser consultados no momento do cadastro.</p>
+			<h3>Como utilizar o DelPhone?</h3>
+				<p>Para utilizar o DelPhone como empresa, é necessário realizar o cadastro para empresas e esperar a análise de seus dados. Após analisado e confirmado, seu negócio será adicionado em nossa plataforma e já estará disponível para que potenciais clientes entrem em contato.</p>
+				<p>Mais detalhes e informações podem ser consultados no momento do cadastro.</p>
 		
-		<h3>Quais tipos de empresas podem cadastrar-se?</h3>
-			<p>Podem cadastrar-se empresas que trabalhem com o serviço de delivery.</p>
+			<h3>Quais tipos de empresas podem cadastrar-se?</h3>
+				<p>Podem cadastrar-se empresas que trabalhem com o serviço de delivery.</p>
 			
-		<h3>Quais são os custos?</h3>
-			<p>O cadastro é totalmente gratuito!</p>
-</body>
+			<h3>Quais são os custos?</h3>
+				<p>O cadastro é totalmente gratuito!</p>
+        </div>
 
+        <div class="rodape space">
+            <div class="toproda" align="center">
+                <div class="roda">
+                    <h2>Redes Sociais</h2>
+                    <img src="img/twiter.svg">
+                    <img src="img/youtube.svg">
+                    <img src="img/facebook.svg">
+                    <img src="img/instagram.svg">
+                </div>
+                <div class="roda">
+                    <nav class="redes">
+                      <h2>Navegação</h2>
+                        <a href="menu.html">Menu</a><br>
+                        <a href="faq.html">Dúvidas frequentes</a><br>
+                        <a href="#">Contatos</a><br>
+                        <a href="sobre_nos.html">Quem somos?</a>
+                    </nav>
+                </div>
+            </div>
+    
+            <hr>
+            <div class="final">
+                @ 2021 DelPhone
+            </div>
+        </div>        
+    </body>
 </html>
