--- a/faq.html
+++ b/faq.html
@@ -15,6 +15,7 @@
     </head>
 
     <body>
+
         <div class="cabecalho">
             <div class="tiles">
               <div class="center">
@@ -24,20 +25,20 @@
               </div>
             </div>
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="menu.html">MENU</a>
+                <a class="navbar-brand" href="#">MENU</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="faq.html">DÚVIDAS FREQUENTES</a>
+                      <a class="nav-link" href="#">DÚVIDAS FREQUENTES</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">CONTATOS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="sobre_nos.html">QUEM SOMOS?</a>
+                      <a class="nav-link" href="#">QUEM SOMOS?</a>
                     </li>
                     <li class="cadastro">
                       <a href="#">CADASTRAR</a>
@@ -52,30 +53,31 @@
 		<h1>Perguntas Frequentes</h1>
 		</center>
                 <h2>Cliente</h2>
-			<h3>Como utilizar o DelPhone?</h3>
-				<p>Para utilizar nossa plataforma como cliente, basta informar sua localização e selecionar qual tipo de produto ou serviço deseja.</p>
-				<p>E pronto! Todos os contatos serão disponibilizados para que você contate a empresa que deseja.</p>
-		
-			<h3>Preciso informar dados pessoais para utilizar o DelPhone?</h3>
-				<p>Não. Você precisa informar apenas sua cidade e estado para que tenha acesso aos contatos das empresas.</p>	
 	
-			<h3>Quais são os custos?</h3>
-				<p>O DelPhone é uma plataforma totalmente gratuita feita para conectar você, de forma simples e rápida, à empresas de delivery.</p>
+					<h3>Como utilizar o DelPhone?</h3>
+						<p>Para utilizar nossa plataforma como cliente, basta informar sua localização e selecionar qual tipo de produto ou serviço deseja.</p>
+						<p>E pronto! Todos os contatos serão disponibilizados para que você contate a empresa que deseja.</p>
 		
-			<h3>As empresas são confiáveis?</h3>
-				<p>Sim, todas as empresas indicadas em nossa plataforma são seguras e confiáveis. Antes de serem disponibilizadas no DelPhone, as empresas passam por uma análise criteriosa e confirmação dos dados.</p>
+					<h3>Preciso informar dados pessoais para utilizar o DelPhone?</h3>
+						<p>Não. Você precisa informar apenas sua cidade e estado para que tenha acesso aos contatos das empresas.</p>	
 	
-		<h2>Empresa</h2>
-	
-			<h3>Como utilizar o DelPhone?</h3>
-				<p>Para utilizar o DelPhone como empresa, é necessário realizar o cadastro para empresas e esperar a análise de seus dados. Após analisado e confirmado, seu negócio será adicionado em nossa plataforma e já estará disponível para que potenciais clientes entrem em contato.</p>
-				<p>Mais detalhes e informações podem ser consultados no momento do cadastro.</p>
+					<h3>Quais são os custos?</h3>
+						<p>O DelPhone é uma plataforma totalmente gratuita feita para conectar você, de forma simples e rápida, à empresas de delivery.</p>
 		
-			<h3>Quais tipos de empresas podem cadastrar-se?</h3>
-				<p>Podem cadastrar-se empresas que trabalhem com o serviço de delivery.</p>
+					<h3>As empresas são confiáveis?</h3>
+						<p>Sim, todas as empresas indicadas em nossa plataforma são seguras e confiáveis. Antes de serem disponibilizadas no DelPhone, as empresas passam por uma análise criteriosa e confirmação dos dados.</p>
+	
+				<h2>Empresa</h2>
+	
+					<h3>Como utilizar o DelPhone?</h3>
+						<p>Para utilizar o DelPhone como empresa, é necessário realizar o cadastro para empresas e esperar a análise de seus dados. Após analisado e confirmado, seu negócio será adicionado em nossa plataforma e já estará disponível para que potenciais clientes entrem em contato.</p>
+						<p>Mais detalhes e informações podem ser consultados no momento do cadastro.</p>
+		
+					<h3>Quais tipos de empresas podem cadastrar-se?</h3>
+						<p>Podem cadastrar-se empresas que trabalhem com o serviço de delivery.</p>
 			
-			<h3>Quais são os custos?</h3>
-				<p>O cadastro é totalmente gratuito!</p>
+					<h3>Quais são os custos?</h3>
+						<p>O cadastro é totalmente gratuito!</p>
         </div>
 
         <div class="rodape space">
@@ -90,10 +92,10 @@
                 <div class="roda">
                     <nav class="redes">
                       <h2>Navegação</h2>
-                        <a href="menu.html">Menu</a><br>
-                        <a href="faq.html">Dúvidas frequentes</a><br>
+                        <a href="#">Menu</a><br>
+                        <a href="#">Dúvidas frequentes</a><br>
                         <a href="#">Contatos</a><br>
-                        <a href="sobre_nos.html">Quem somos?</a>
+                        <a href="#">Quem somos?</a>
                     </nav>
                 </div>
             </div>
@@ -102,6 +104,8 @@
             <div class="final">
                 @ 2021 DelPhone
             </div>
-        </div>        
+        </div>
+        
     </body>
+
 </html>
