--- a/menu.html
+++ b/menu.html
@@ -86,7 +86,8 @@
                 <img src="img/celular_sem_fundo.png">
             </div>
             <div class="text" align="right">
-              O objetivo desse website é facilitar o acesso aos contatos de delivery próximos ao usuário e ajudar na divulgação de empresas locais.            </div>
+              O objetivo desse website é facilitar o acesso aos contatos de delivery próximos ao usuário e ajudar na divulgação de empresas locais.<br>      
+			  Rápido, fácil e gratuito!</div>
         </div>
 
         <div class="rodape space">
