--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -25,20 +26,20 @@
               </div>
             </div>
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">MENU</a>
+                <a class="navbar-brand" href="menu.html">MENU</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">DÚVIDAS FREQUENTES</a>
+                      <a class="nav-link" href="faq.html">DÚVIDAS FREQUENTES</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">CONTATOS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">QUEM SOMOS?</a>
+                      <a class="nav-link" href="sobre_nos.html">QUEM SOMOS</a>
                     </li>
                     <li class="cadastro">
                       <a href="#">CADASTRAR</a>
@@ -59,13 +60,17 @@
 	<article>
 		<h2> Como começamos </h2>
 		
-  <p>Apesar de o projeto só ter saído do papel por causa de um trabalho para a faculdade, nosso objetivo sempre foi encontar problemas reais, para que possamos oferecer alguma melhora para a sociedade. Isso por si só já seria difícil, mas ainda queríamos mais: encontrar uma dor comum a todos, que não estivesse restrita a uma regiãa, grupo social ou comunidade.</p>
+  <p>Apesar de o projeto só ter saído do papel por causa da necessidade de apresentar um trabalho para a faculdade, em conversas em rodas de amigos sempre expressamos vontade de buscar soluções para problemas reais,a fim de que possamos oferecer alguma melhora para a sociedade em que vivemos. A ideia inicial era ajudar estudantes universitários que precisaram sair de suas cidades natais para concluir seus estudos a encontrar serviços de delivery. Isso por si só já seria difícil, mas ainda queríamos mais: encontrar uma dor comum a todos, que não estivesse restrita a uma região, grupo social ou comunidade.</p>
   
-  <p>Assim, ajudar serviços de delivery longe dos grandes centros urbanos foi a solução. Com inspiração de um bot de WhatsApp da cidade de Parintins, iniciamos o projeto em agosto de 2021, com a meta de expansão para o Brasil inteiro, no formato de site/aplicativo acessível a todos.</p>
+  <p>Assim, percebemos que não só os estudantes são afetados por essa problemática, mas também grande parte da população brasileira. Grande empresas de delivery precisam de muita demanda em um pequeno espaço urbano bem como trabalhadores dispostos a fazer os serviços de entrega para que seus serviços sejam lucrativos. Infelizmente, pequenas cidades ou até mesmo o entorno de grandes centros urbanos não são atendidos por causa da falta de um desses fatores. Dessa forma, favorecer os negócios locais, conectadno prestadores de serviços aos seus clientes, foi a solução. </p>
+  
+  <p>Seguindo o princípio de acessibilidade e destaque para a realidade brasileira que não gira em torno das grandes metrópoles, optamos por tomar como inspiração de um bot de WhatsApp criado por habitantes da cidade de Parintins. Esse projeto tornou possível o reavivamento do comércio local mesmo durante a pandemia de COVID-19, além de oferecer maior segurança aos habitantes, que não precisam se expor para adquirir as mercadorias necessárias.</p>  
+  
+  <p>Diante de todos esses problemas e motivadoa a apresentar uma solução, iniciamos o projeto em agosto de 2021, com a meta de expansão para o Brasil inteiro, no formato de site/aplicativo acessível a todos.</p>
  
 		<h2> Nosso time </h2>
 		
-<p>Uma equipe formada por 5 estudantes de graduação da FGV-EMAp, muito diferentes, compartilhando uma característica: ser incrivelmente sonhadores.</p>
+<p>Uma equipe formada por 5 estudantes de graduação da FGV-EMAp, graduandos em Matemática Aplicada e Ciência de Dados e Inteligência Artificial. Somos muito diferentes, mas compartilhando uma característica: desejo de mudar nossas comunidades.</p>
 
 		<div class = "container">
 			<div class = "row">
@@ -79,20 +84,20 @@
 				</div>
 				
 				<div class = "pessoas">
-		<img src="img/darlanzinho.png">
+		<img src="img/Darlan.png">
 		<h5  class = "pessoas"> Darlan Araújo (SP) </h5>
 		<h6>O hacker, para quê Stack Overflow</h6>
 		<h6>quando se tem ele?</h6>
 				</div>
 				
 				<div class = "pessoas">
-		<img src="img/leticinha_nossa_rainha.png">
+		<img src="img/Leticia.png">
 		<h5  class = "pessoas"> Letícia Brandão (DF) </h5>
 		<h6>Leticinha, nossa rainha</h6>
 				</div>
 		
 				<div class = "pessoas">
-		<img src="img/palominha.png">
+		<img src="img/Paloma.png">
 		<h5 class = "pessoas"> Paloma Borges (MG) </h5>
 		<h6>A empreendedora, mostra sempre</h6>
 		<h6>uma nova visão das empresas</h6>
@@ -100,7 +105,7 @@
 				</div>
 		
 				<div class = "pessoas">
-		<img src="img/pedrinho.png">
+		<img src="img/Pedro.png">
 		<h5 class = "pessoas"> Pedro Garcia (AM) </h5>
 		<h6>O designer gráfico, cria logos</h6>
 		<h6>e define paletas, responsável </h6>
@@ -110,9 +115,17 @@
 		</div>
 		
 		
-		<h2> Aonde queremos chegar </h2>
+		<h2> Nossas metas </h2>
 		
 		<p>Para jovens que conseguiram ingressar em uma faculdade de excelência com bolsa integral apesar de tudo, nada é impossível. </p>
+		
+		<ul>
+		<li> Continuar trabalhando no projeto depois da avaliação da faculdade</li>
+		<li> Encontrar empresas dispostas a ser nossos parceiros</li>
+		<li> Ter colaboradores de todas as regiões do país</li>
+		<li> Possuir serviços de delivery cadastrados em todos os estados brasileiros</li>
+		<li> Criar um aplicativo funcional</li>
+		</ul>
  
 	</article>
             </center>
@@ -130,10 +143,10 @@
                 <div class="roda">
                     <nav class="redes">
                       <h2>Navegação</h2>
-                        <a href="#">Menu</a><br>
-                        <a href="#">Dúvidas frequentes</a><br>
+                        <a href="menu.html">Menu</a><br>
+                        <a href="faq.html">Dúvidas frequentes</a><br>
                         <a href="#">Contatos</a><br>
-                        <a href="#">Quem somos?</a>
+                        <a href="sobre_nos">Quem somos</a>
                     </nav>
                 </div>
             </div>
