--- a/como_funcionamos.html
+++ b/como_funcionamos.html
@@ -25,20 +25,20 @@
               </div>
             </div>
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">MENU</a>
+                <a class="navbar-brand" href="menu.html">MENU</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">DÚVIDAS FREQUENTES</a>
+                      <a class="nav-link" href="faq.html">DÚVIDAS FREQUENTES</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">CONTATOS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">QUEM SOMOS?</a>
+                      <a class="nav-link" href="sobre_nos.html">QUEM SOMOS?</a>
                     </li>
                     <li class="cadastro">
                       <a href="#">CADASTRAR</a>
@@ -75,10 +75,10 @@
                 <div class="roda">
                     <nav class="redes">
                       <h2>Navegação</h2>
-                        <a href="#">Menu</a><br>
-                        <a href="#">Dúvidas frequentes</a><br>
+                        <a href="menu.html">Menu</a><br>
+                        <a href="faq.html">Dúvidas frequentes</a><br>
                         <a href="#">Contatos</a><br>
-                        <a href="#">Quem somos?</a>
+                        <a href="sobre_nos.html">Quem somos?</a>
                     </nav>
                 </div>
             </div>
