--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -93,7 +93,9 @@
 				<div class = "pessoas">
 		<img src="img/Leticia.png">
 		<h5  class = "pessoas"> Letícia Brandão (DF) </h5>
-		<h6>Leticinha, nossa rainha</h6>
+		<h6>A inovadora, traz novas ideias</h6>
+		<h6>e sempre descobre como resolver</h6> 
+		<h6>os problemas.</h6>
 				</div>
 		
 				<div class = "pessoas">
