--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/png" href=""/>
         <title>DelPhone</title>
         <link href="front_end/style.css" rel="stylesheet">
         <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
-        <link rel="shortcut icon" href="img/logotipo.jpg">
+        <link rel="sortcut icon" href="img/logotipo.png">
         <script src="jquery/jquery.min.js"></script>
         <script src="jquery/popper.min.js"></script>
         <script src="front_end/interaction.js"></script>
