--- a/faq.html
+++ b/faq.html
@@ -58,10 +58,10 @@
 						<p>E pronto! Todos os contatos serão disponibilizados para que você contate a empresa que deseja.</p>
 		
 					<h3>Preciso informar dados pessoais para utilizar o DelPhone?</h3>
-						<p>Não. Você precisa informar apenas sua cidade e estado para que tenha acesso aos contatos das empresas.</p>	
+						<p>Sim. Para sua segurança e a contínua melhoria da plataforma, solicitamos alguns dados pessoais, que são armazenados de forma segura.</p>	
 	
 					<h3>Quais são os custos?</h3>
-						<p>O DelPhone é uma plataforma totalmente gratuita feita para conectar você, de forma simples e rápida, à empresas de delivery.</p>
+						<p>O DelPhone é uma plataforma totalmente gratuita feita para conectar você, de forma simples e rápida, a empresas de delivery.</p>
 		
 					<h3>As empresas são confiáveis?</h3>
 						<p>Sim, todas as empresas indicadas em nossa plataforma são seguras e confiáveis. Antes de serem disponibilizadas no DelPhone, as empresas passam por uma análise criteriosa e confirmação dos dados.</p>
