--- a/faq.html
+++ b/faq.html
@@ -54,12 +54,9 @@
                 <h2>Cliente</h2>
 	
 					<h3>Como utilizar o DelPhone?</h3>
-						<p>Para utilizar nossa plataforma como cliente, basta informar sua localização e selecionar qual tipo de produto ou serviço deseja.</p>
+						<p>Para utilizar nossa plataforma como cliente, basta realizar um rápido cadastro, informar sua localização e selecionar qual tipo de produto ou serviço deseja.</p>
 						<p>E pronto! Todos os contatos serão disponibilizados para que você contate a empresa que deseja.</p>
 		
-					<h3>Preciso informar dados pessoais para utilizar o DelPhone?</h3>
-						<p>Sim. Para sua segurança e a contínua melhoria da plataforma, solicitamos alguns dados pessoais, que são armazenados de forma segura.</p>	
-	
 					<h3>Quais são os custos?</h3>
 						<p>O DelPhone é uma plataforma totalmente gratuita feita para conectar você, de forma simples e rápida, a empresas de delivery.</p>
 		
