--- a/faq.html
+++ b/faq.html
@@ -53,8 +53,12 @@
 		</center>
                 <h2>Cliente</h2>
 	
-			<h4>O que é o DelPhone?</h4>
-				<p>O DelPhone é uma plataforma totalmente gratuita feita para conectar você, de forma simples e rápida, à empresas de delivery.</p>
+	<div class="btn-group" role="group" aria-label="pergunta1">
+			
+		<h4> Como utilizar o DelPhone? &emsp;</h4> 
+			
+		<button class="btn btn-outline-default btn-sm" type="button" data-toggle="collapse" data-target="#pergunta1" aria-expanded="false" aria-controls="pergunta1"> > </button>
+	</div>
 					
 			<h4>Como utilizar o DelPhone?</h4>
 				<p>Para utilizar nossa plataforma como cliente, basta informar sua localização e selecionar qual tipo de produto ou serviço deseja.</p>
