--- a/faq.html
+++ b/faq.html
@@ -59,7 +59,15 @@
 			
 		<button class="btn btn-outline-default btn-sm" type="button" data-toggle="collapse" data-target="#pergunta1" aria-expanded="false" aria-controls="pergunta1"> > </button>
 	</div>
-					
+	
+		<div class="collapse" id="pergunta1">
+  			<div class="card card-body">
+    		Para utilizar nossa plataforma como cliente, basta informar sua localização e selecionar qual tipo de produto ou serviço deseja.
+		E pronto! Todos os contatos serão disponibilizados para que você contate a empresa que deseja.
+ 			 </div>
+		</div>
+		
+		
 			<h4>Como utilizar o DelPhone?</h4>
 				<p>Para utilizar nossa plataforma como cliente, basta informar sua localização e selecionar qual tipo de produto ou serviço deseja.</p>
 				<p>E pronto! Todos os contatos serão disponibilizados para que você contate a empresa que deseja.</p>
