--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -6,7 +6,7 @@
         <title>DelPhone</title>
         <link href="front_end/style.css" rel="stylesheet">
         <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
-         <link rel="sortcut icon" href="img/logotipo.png">
+        <link rel="sortcut icon" href="img/logotipo.png">
         <script src="jquery/jquery.min.js"></script>
         <script src="jquery/popper.min.js"></script>
         <script src="bootstrap/bootstrap.min.js"></script>
@@ -31,13 +31,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="faq.html">DÚVIDAS FREQUENTES</a>
+                      <a class="nav-link" href="como_funcionamos.html">COMO FUNCIONAMOS</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="faq.html">PERGUNTAS FREQUENTES</a>
+                    </li>					
+                    <li class="nav-item">
+                      <a class="nav-link" href="sobre_nos.html">SOBRE NÓS</a>
+                    </li>					
                     <li class="nav-item">
                       <a class="nav-link" href="#">CONTATOS</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="sobre_nos.html">QUEM SOMOS?</a>
                     </li>
                     <li class="cadastro">
                       <a href="#">CADASTRAR</a>
@@ -141,9 +144,10 @@
                     <nav class="redes">
                       <h2>Navegação</h2>
                         <a href="menu.html">Menu</a><br>
-                        <a href="faq.html">Dúvidas frequentes</a><br>
+			<a href="faq.html">Como funcionamos</a><br>
+                        <a href="faq.html">Perguntas frequentes</a><br>
+                        <a href="sobre_nos.html">Sobre nós</a><br>				
                         <a href="#">Contatos</a><br>
-                        <a href="sobre_nos.html">Quem somos?</a>
                     </nav>
                 </div>
             </div>
