--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@
                       <a class="nav-link" href="#">CONTATOS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="sobre_nos.html">QUEM SOMOS?</a>
+                      <a class="nav-link" href="sobre_nos.html">SOBRE NÓS</a>
                     </li>
                     <li class="cadastro">
                       <a href="#">CADASTRAR</a>
@@ -60,8 +60,8 @@
 		<button class="btn btn-outline-default btn-sm" type="button" data-toggle="collapse" data-target="#pergunta1" aria-expanded="false" aria-controls="pergunta1"> > </button>
 	</div>
 	
-		<div class="collapse" id="pergunta1">
-  			<div class="card card-body">
+		<div class="collapse " id="pergunta1">
+  			<div class="card card-body bg-warning">
     		Para utilizar nossa plataforma como cliente, basta informar sua localização e selecionar qual tipo de produto ou serviço deseja.
 		E pronto! Todos os contatos serão disponibilizados para que você contate a empresa que deseja.
  			 </div>
@@ -76,8 +76,8 @@
 	</div>
 	
 		<div class="collapse" id="pergunta2">
-  			<div class="card card-body">
-    		Sim. Precisamos de alguns dados para garantir a sua segurança e a das empresas cadastradas. Mas não se preocupe, elas não serão divulgadas
+  			<div class="card card-body bg-warning">
+    		Sim. Precisamos de alguns dados para garantir a sua segurança e a das empresas cadastradas. Mas não se preocupe, eles não serão divulgadas
  			 </div>
 		</div>
 		<br>
@@ -90,7 +90,7 @@
 	</div>
 	
 		<div class="collapse" id="pergunta3">
-  			<div class="card card-body">
+  			<div class="card card-body bg-warning">
     		Claro. Apesar de inserir seu endereço no cadastro, você pode informar uma diferente localização quandor for realizar uma solicitação e consultar as empresas disponíveis.
  			 </div>
 		</div>
@@ -105,7 +105,7 @@
 	</div>
 	
 		<div class="collapse" id="pergunta4">
-  			<div class="card card-body">
+  			<div class="card card-body bg-warning">
     		O DelPhone é uma plataforma 100% gratuita.
  			 </div>
 		</div>
@@ -120,7 +120,7 @@
 	</div>
 	
 		<div class="collapse" id="pergunta5">
-  			<div class="card card-body">
+  			<div class="card card-body bg-warning">
     		Os meios de pagamento são responsabilidade de cada empresa. O DelPhone é uma plataforma totalmente gratuita.
 			
  			 </div>
@@ -136,7 +136,7 @@
 	</div>
 	
 		<div class="collapse" id="pergunta6">
-  			<div class="card card-body">
+  			<div class="card card-body bg-warning">
     		Você encontra o horário de funcionamento, entre outras informações, na descrição de cada estabelecimento.
 			
  			 </div>
@@ -152,7 +152,7 @@
 	</div>
 	
 		<div class="collapse" id="pergunta7">
-  			<div class="card card-body">
+  			<div class="card card-body bg-warning">
     		Sim, todas as empresas indicadas em nossa plataforma são seguras e confiáveis. Antes de serem disponibilizadas no DelPhone, as empresas passam por uma análise criteriosa e confirmação dos dados.
 			
  			 </div>
@@ -168,7 +168,7 @@
 	</div>
 	
 		<div class="collapse" id="pergunta8">
-  			<div class="card card-body">
+  			<div class="card card-body bg-warning">
     		É necessário que você tenha acesso à internet, pois a plataforma está disponível apenas de forma online.
 			
  			 </div>
@@ -184,7 +184,7 @@
 	</div>
 	
 		<div class="collapse" id="pergunta9">
-  			<div class="card card-body">
+  			<div class="card card-body bg-warning">
     		Sim. Basta entrar na sua conta pela página de login e clicar em cancelar seu cadastro.
 			
  			 </div>
@@ -203,7 +203,7 @@
 	</div>
 	
 		<div class="collapse" id="pergunta10">
-  			<div class="card card-body">
+  			<div class="card card-body bg-warning">
     		O DelPhone é uma plataforma totalmente gratuita feita para divulgar e conectar a sua empresa à potenciais clientes
 			
  			 </div>
@@ -219,7 +219,7 @@
 	</div>
 	
 		<div class="collapse" id="pergunta11">
-  			<div class="card card-body">
+  			<div class="card card-body bg-warning">
     		Para utilizar o DelPhone como empresa, é necessário realizar o cadastro para empresas e esperar a análise de seus dados. Após analisado e confirmado, seu negócio será adicionado em nossa plataforma e já estará disponível para que potenciais clientes entrem em contato.<br>
 			Mais detalhes e informações podem ser consultados no momento do cadastro.
 			
@@ -236,7 +236,7 @@
 	</div>
 	
 		<div class="collapse" id="pergunta12">
-  			<div class="card card-body">
+  			<div class="card card-body bg-warning">
     		Podem cadastrar-se empresas que trabalhem com o serviço de delivery.
 			
  			 </div>
@@ -252,7 +252,7 @@
 	</div>
 	
 		<div class="collapse" id="pergunta13">
-  			<div class="card card-body">
+  			<div class="card card-body bg-warning">
     		O cadastro é totalmente gratuito!
 			
  			 </div>
@@ -268,7 +268,7 @@
 	</div>
 	
 		<div class="collapse" id="pergunta14">
-  			<div class="card card-body">
+  			<div class="card card-body bg-warning">
     		Sim, você pode editar as informações do seu estabelecimento em seu acesso restrito, após realizar login.
 			
  			 </div>
@@ -284,7 +284,7 @@
 	</div>
 	
 		<div class="collapse" id="pergunta15">
-  			<div class="card card-body">
+  			<div class="card card-body bg-warning">
     		Sim. Basta entrar na sua conta pela página de login e clicar em cancelar seu cadastro.
 			
  			 </div>
@@ -321,7 +321,7 @@
                         <a href="menu.html">Menu</a><br>
                         <a href="faq.html">Dúvidas frequentes</a><br>
                         <a href="#">Contatos</a><br>
-                        <a href="sobre_nos.html">Quem somos?</a>
+                        <a href="sobre_nos.html">Sobre nós</a>
                     </nav>
                 </div>
             </div>
