--- a/faq.html
+++ b/faq.html
@@ -319,9 +319,10 @@
                     <nav class="redes">
                       <h2>Navegação</h2>
                         <a href="menu.html">Menu</a><br>
-                        <a href="faq.html">Dúvidas frequentes</a><br>
+						<a href="faq.html">Como funcionamos</a><br>
+                        <a href="faq.html">Perguntas frequentes</a><br>
+                        <a href="sobre_nos.html">Sobre nós</a><br>				
                         <a href="#">Contatos</a><br>
-                        <a href="sobre_nos.html">Sobre nós</a>
                     </nav>
                 </div>
             </div>
