--- a/menu.html
+++ b/menu.html
@@ -85,8 +85,35 @@
                 <img src="img/celular_sem_fundo.png">
             </div>
             <div class="text" align="right">
-              O objetivo desse website é facilitar o acesso aos contatos de delivery próximos ao usuário e ajudar na divulgação de empresas locais.<br>      
-			  Rápido, fácil e gratuito!</div>
+              O objetivo desse website é disponibilizar os contatos de serviços de delivery próximos a você. Além disso, você ainda ajuda o comércio local! Sem risco de desatualização e sem taxas de utilização. Simples assim, rápido, fácil e gratuito!</div>
+        </div>
+		
+		
+		<div class="conteudo">
+            <center>
+                <div id="carrossel" class="carousel carousel-fade slide col-5" data-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="img/avaliacao_1.png" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="img/avaliacao_2.png" alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="img/avaliacao_3.png" alt="Third slide">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carrossel" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carrossel" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+    
+            </center>
         </div>
 
         <div class="rodape space">
