--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
         <script src="bootstrap/bootstrap.min.js"></script>
     </head>
 
-    <body>
+        <body>
 
         <div class="cabecalho">
             <div class="tiles">
@@ -31,13 +31,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="faq.html">DÚVIDAS FREQUENTES</a>
+                      <a class="nav-link" href="como_funcionamos.html">COMO FUNCIONAMOS</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="faq.html">PERGUNTAS FREQUENTES</a>
+                    </li>					
+                    <li class="nav-item">
+                      <a class="nav-link" href="sobre_nos.html">SOBRE NÓS</a>
+                    </li>					
                     <li class="nav-item">
                       <a class="nav-link" href="#">CONTATOS</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="sobre_nos.html">QUEM SOMOS?</a>
                     </li>
                     <li class="cadastro">
                       <a href="#">CADASTRAR</a>
@@ -129,9 +132,10 @@
                     <nav class="redes">
                       <h2>Navegação</h2>
                         <a href="menu.html">Menu</a><br>
-                        <a href="faq.html">Dúvidas frequentes</a><br>
+			<a href="faq.html">Como funcionamos</a><br>
+                        <a href="faq.html">Perguntas frequentes</a><br>
+                        <a href="sobre_nos.html">Sobre nós</a><br>					
                         <a href="#">Contatos</a><br>
-                        <a href="sobre_nos.html">Quem somos?</a>
                     </nav>
                 </div>
             </div>
