--- a/faq.html
+++ b/faq.html
@@ -31,13 +31,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="faq.html">DÚVIDAS FREQUENTES</a>
+                      <a class="nav-link" href="como_funcionamos.html">COMO FUNCIONAMOS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">CONTATOS</a>
-                    </li>
+                      <a class="nav-link" href="faq.html">PERGUNTAS FREQUENTES</a>
+                    </li>					
                     <li class="nav-item">
                       <a class="nav-link" href="sobre_nos.html">SOBRE NÓS</a>
+                    </li>					
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">CONTATOS</a>
                     </li>
                     <li class="cadastro">
                       <a href="#">CADASTRAR</a>
@@ -305,7 +308,6 @@
 		
 			
         </div>
-
         <div class="rodape space">
             <div class="toproda" align="center">
                 <div class="roda">
@@ -319,9 +321,9 @@
                     <nav class="redes">
                       <h2>Navegação</h2>
                         <a href="menu.html">Menu</a><br>
-						<a href="faq.html">Como funcionamos</a><br>
+			<a href="faq.html">Como funcionamos</a><br>
                         <a href="faq.html">Perguntas frequentes</a><br>
-                        <a href="sobre_nos.html">Sobre nós</a><br>				
+                        <a href="sobre_nos.html">Sobre nós</a><br>					
                         <a href="#">Contatos</a><br>
                     </nav>
                 </div>
