--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -57,21 +57,20 @@
 
 </h1>
 
-<body>
 	<article>
 		<h2> Como começamos </h2>
 		
-  <p>Apesar de o projeto só ter saído do papel por causa da necessidade de apresentar um trabalho para a faculdade, em conversas em rodas de amigos sempre expressamos vontade de buscar soluções para problemas reais,a fim de que possamos oferecer alguma melhora para a sociedade em que vivemos. A ideia inicial era ajudar estudantes universitários que precisaram sair de suas cidades natais para concluir seus estudos a encontrar serviços de delivery. Isso por si só já seria difícil, mas ainda queríamos mais: encontrar uma dor comum a todos, que não estivesse restrita a uma região, grupo social ou comunidade.</p>
+  <p>Apesar de o projeto só ter saído do papel por causa da necessidade de apresentar um trabalho para a faculdade, em conversas em rodas de amigos sempre expressamos vontade de buscar soluções para problemas reais, a fim de que possamos oferecer alguma melhoria para a sociedade em que vivemos. A ideia inicial era ajudar estudantes universitários que precisaram sair de suas cidades natais para concluir seus estudos a encontrarem serviços de delivery. Isso por si só já seria difícil, mas ainda queríamos mais: encontrar uma dor comum a todos, que não estivesse restrita a uma região, grupo social ou comunidade.</p>
   
-  <p>Assim, percebemos que não só os estudantes são afetados por essa problemática, mas também grande parte da população brasileira. Grande empresas de delivery precisam de muita demanda em um pequeno espaço urbano bem como trabalhadores dispostos a fazer os serviços de entrega para que seus serviços sejam lucrativos. Infelizmente, pequenas cidades ou até mesmo o entorno de grandes centros urbanos não são atendidos por causa da falta de um desses fatores. Dessa forma, favorecer os negócios locais, conectadno prestadores de serviços aos seus clientes, foi a solução. </p>
+  <p>Assim, percebemos que não só os estudantes são afetados por essa problemática, mas também grande parte da população brasileira. A maioria das empresas de delivery precisam de muita demanda em um pequeno espaço urbano bem como trabalhadores dispostos a fazer os serviços de entrega para que seus serviços sejam lucrativos. Infelizmente, pequenas cidades ou até mesmo o entorno de grandes centros urbanos não são atendidos por causa da falta de um desses fatores. Dessa forma, favorecer os negócios locais, conectando prestadores de serviços aos seus clientes, foi a nossa solução. </p>
   
   <p>Seguindo o princípio de acessibilidade e destaque para a realidade brasileira que não gira em torno das grandes metrópoles, optamos por tomar como inspiração de um bot de WhatsApp criado por habitantes da cidade de Parintins. Esse projeto tornou possível o reavivamento do comércio local mesmo durante a pandemia de COVID-19, além de oferecer maior segurança aos habitantes, que não precisam se expor para adquirir as mercadorias necessárias.</p>  
   
-  <p>Diante de todos esses problemas e motivadoa a apresentar uma solução, iniciamos o projeto em agosto de 2021, com a meta de expansão para o Brasil inteiro, no formato de site/aplicativo acessível a todos.</p>
+  <p>Diante de todos esses problemas e motivados a apresentar uma solução, iniciamos o projeto em agosto de 2021, com a meta de expansão para o Brasil inteiro, no formato de site/aplicativo acessível a todos.</p>
  
 		<h2> Nosso time </h2>
 		
-<p>Uma equipe formada por 5 estudantes de graduação da FGV-EMAp, graduandos em Matemática Aplicada e Ciência de Dados e Inteligência Artificial. Somos muito diferentes, mas compartilhando uma característica: desejo de mudar nossas comunidades.</p>
+<p>Uma equipe formada por 5 estudantes de graduação da FGV-EMAp, graduandos em Matemática Aplicada e Ciência de Dados e Inteligência Artificial. Somos muito diferentes, mas compartilhamos uma característica: desejo de mudar nossas comunidades.</p>
 
 		<div class = "container">
 			<div class = "row">
@@ -119,7 +118,7 @@
 		
 		<ul>
 		<li> Continuar trabalhando no projeto depois da avaliação da faculdade</li>
-		<li> Encontrar empresas dispostas a ser nossos parceiros</li>
+		<li> Encontrar empresas dispostas a serem nossas parceiras</li>
 		<li> Ter colaboradores de todas as regiões do país</li>
 		<li> Possuir serviços de delivery cadastrados em todos os estados brasileiros</li>
 		<li> Criar um aplicativo funcional e gratuito</li>
@@ -144,7 +143,7 @@
                     <nav class="redes">
                       <h2>Navegação</h2>
                         <a href="menu.html">Menu</a><br>
-			<a href="faq.html">Como funcionamos</a><br>
+			<a href="como_funcionamos.html">Como funcionamos</a><br>
                         <a href="faq.html">Perguntas frequentes</a><br>
                         <a href="sobre_nos.html">Sobre nós</a><br>				
                         <a href="#">Contatos</a><br>
