--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -10,7 +10,7 @@
         <script src="jquery/jquery.min.js"></script>
         <script src="jquery/popper.min.js"></script>
         <script src="bootstrap/bootstrap.min.js"></script>
-		<script src="bootstrap/bootstrap-grid.css"></script>
+	<script src="bootstrap/bootstrap-grid.css"></script>
     </head>
 
     <body>
@@ -18,9 +18,9 @@
         <div class="cabecalho">
             <div class="tiles">
               <div class="center">
-                <img src="img/DELPHONE.png">
-                <img src="img/nome_sem_fundo.png"> 
-                <a class="restrito" href="#"><img style="width: 40px" src="img/cadeado.svg"></a>             
+                <img alt="logotipo" src="img/DELPHONE.png">
+                <img alt="DelPhone" src="img/nome_sem_fundo.png"> 
+                <a class="restrito" href="#"><img alt="Cadeado" style="width: 40px" src="img/cadeado.svg"></a>             
               </div>
             </div>
             <nav class="navbar navbar-expand-lg">
@@ -77,35 +77,35 @@
 			<div class = "row">
 				<div class = "col">
 				<div class = "pessoas">
-		<img src="img/Andre.png">
+		<img alt="André Felipe" src="img/Andre.png">
 		<h5 class = "pessoas"> André Felipe (PR) </h5>
 		O sensato tradutor, que entende as loucuras do Darlan e as torna possíveis.
 				</div>
 				</div>
 				<div class = "col">
 				<div class = "pessoas">
-		<img src="img/Darlan.png">
+		<img alt="Darlan Araújo" src="img/Darlan.png">
 		<h5  class = "pessoas"> Darlan Araújo (SP) </h5>
 		<p class = "pessoas">O hacker, para quê Stack Overflow quando se tem ele?</p>
 				</div>
 				</div>
 				<div class = "col">
 				<div class = "pessoas">
-		<img src="img/Leticia.png">
+		<img alt="Letícia Brandão" src="img/Leticia.png">
 		<h5  class = "pessoas"> Letícia Brandão (DF) </h5>
 		<p class = "pessoas">A inovadora, traz novas ideias e sempre descobre como resolver os problemas.
 				</div>
 				</div>
 				<div class = "col">
 				<div class = "pessoas">
-		<img src="img/Paloma.png">
+		<img alt="Paloma Borges" src="img/Paloma.png">
 		<h5 class = "pessoas"> Paloma Borges (MG) </h5>
 		<p class = "pessoas">A empreendedora, mostra sempre uma nova visão das empresas  e das necessidades delas. </p>
 				</div>
 				</div>
 				<div class = "col">
 				<div class = "pessoas">
-		<img src="img/Pedro.png">
+		<img alt="Pedro Garcia" src="img/Pedro.png">
 		<h5 class = "pessoas"> Pedro Garcia (AM) </h5>
 		<p class = "pessoas">O designer gráfico, cria logos e define paletas, responsável pela identidade visual do projeto.</p>
 				</div>
@@ -135,10 +135,10 @@
             <div class="toproda" align="center">
                 <div class="roda">
                     <h2>Redes Sociais</h2>
-                    <img src="img/twiter.svg">
-                    <img src="img/youtube.svg">
-                    <img src="img/facebook.svg">
-                    <img src="img/instagram.svg">
+                    <img alt="Twitter" src="img/twiter.svg">
+                    <img alt="YouTube" src="img/youtube.svg">
+                    <img alt="Facebook" src="img/facebook.svg">
+                    <img alt="Instagram" src="img/instagram.svg">
                 </div>
                 <div class="roda">
                     <nav class="redes">
