--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,7 +43,7 @@
                       <a class="nav-link" href="#">CONTATOS</a>
                     </li>
                     <li class="cadastro">
-                      <a href="#">CADASTRAR</a>
+                      <a class="nav-link" href="cadastro.html">CADASTRAR</a>
                     </li>
                   </ul>
                 </div>
