--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,9 +18,9 @@
         <div class="cabecalho">
             <div class="tiles">
               <div class="center">
-                <img src="img/DELPHONE.png">
-                <img src="img/nome_sem_fundo.png"> 
-                <a class="restrito" href="#"><img style="width: 40px" src="img/cadeado.svg"></a>             
+                <img alt="logotipo" src="img/DELPHONE.png">
+                <img alt="DelPhone" src="img/nome_sem_fundo.png"> 
+                <a class="restrito" href="login.html"><img alt="cadeado" style="width: 40px" src="img/cadeado.svg"></a>             
               </div>
             </div>
             <nav class="navbar navbar-expand-lg">
@@ -43,7 +43,7 @@
                       <a class="nav-link" href="#">CONTATOS</a>
                     </li>
                     <li class="cadastro">
-                      <a href="#">CADASTRAR</a>
+                      <a href="cadastro.html">CADASTRAR</a>
                     </li>
                   </ul>
                 </div>
@@ -312,19 +312,19 @@
             <div class="toproda" align="center">
                 <div class="roda">
                     <h2>Redes Sociais</h2>
-                    <img src="img/twiter.svg">
-                    <img src="img/youtube.svg">
-                    <img src="img/facebook.svg">
-                    <img src="img/instagram.svg">
+                    <img alt="Twitter" src="img/twiter.svg">
+                    <img alt="YouTube" src="img/youtube.svg">
+                    <img alt="Facebook" src="img/facebook.svg">
+                    <img alt="Instagram" src="img/instagram.svg">
                 </div>
                 <div class="roda">
                     <nav class="redes">
                       <h2>Navegação</h2>
                         <a href="menu.html">Menu</a><br>
-			<a href="faq.html">Como funcionamos</a><br>
+			<a href="como_funcionamos.html">Como funcionamos</a><br>
                         <a href="faq.html">Perguntas frequentes</a><br>
                         <a href="sobre_nos.html">Sobre nós</a><br>					
-                        <a href="#">Contatos</a><br>
+                        <a href="contatos.html">Contatos</a><br>
                     </nav>
                 </div>
             </div>
