--- a/faq.html
+++ b/faq.html
@@ -40,10 +40,10 @@
                       <a class="nav-link" href="sobre_nos.html">SOBRE NÓS</a>
                     </li>					
                     <li class="nav-item">
-                      <a class="nav-link" href="#">CONTATOS</a>
+                      <a class="nav-link" href="contatos.html">CONTATOS</a>
                     </li>
                     <li class="cadastro">
-                      <a href="cadastro.html">CADASTRAR</a>
+                      <a class="nav-link" href="cadastro.html">CADASTRAR</a>
                     </li>
                   </ul>
                 </div>
