--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -9,8 +9,8 @@
         <link rel="sortcut icon" href="img/logotipo.png">
         <script src="jquery/jquery.min.js"></script>
         <script src="jquery/popper.min.js"></script>
+        <script src="front_end/interaction.js"></script>
         <script src="bootstrap/bootstrap.min.js"></script>
-	<script src="bootstrap/bootstrap-grid.css"></script>
     </head>
 
     <body>
@@ -20,7 +20,7 @@
               <div class="center">
                 <img alt="logotipo" src="img/DELPHONE.png">
                 <img alt="DelPhone" src="img/nome_sem_fundo.png"> 
-                <a class="restrito" href="#"><img alt="Cadeado" style="width: 40px" src="img/cadeado.svg"></a>             
+                <a class="restrito" href="login.html"><img alt="cadeado" style="width: 40px" src="img/cadeado.svg"></a>             
               </div>
             </div>
             <nav class="navbar navbar-expand-lg">
@@ -40,7 +40,7 @@
                       <a class="nav-link" href="sobre_nos.html">SOBRE NÓS</a>
                     </li>					
                     <li class="nav-item">
-                      <a class="nav-link" href="#">CONTATOS</a>
+                      <a class="nav-link" href="contatos.html">CONTATOS</a>
                     </li>
                     <li class="cadastro">
                       <a class="nav-link" href="cadastro.html">CADASTRAR</a>
@@ -145,8 +145,8 @@
                         <a href="menu.html">Menu</a><br>
 			<a href="como_funcionamos.html">Como funcionamos</a><br>
                         <a href="faq.html">Perguntas frequentes</a><br>
-                        <a href="sobre_nos.html">Sobre nós</a><br>				
-                        <a href="#">Contatos</a><br>
+                        <a href="sobre_nos.html">Sobre nós</a><br>					
+                        <a href="contatos.html">Contatos</a><br>
                     </nav>
                 </div>
             </div>
