--- a/faq.html
+++ b/faq.html
@@ -54,7 +54,7 @@
 		<center>
 		<h1>Perguntas Frequentes</h1>
 		</center>
-                <h2>Cliente</h2>
+                <h2><u>Cliente</u></h2>
 	
 	<div class="btn-group" role="group" aria-label="pergunta1">
 			
@@ -195,7 +195,7 @@
 		<br>
 		
 	<br>
-		<h2>Empresa</h2>
+		<h2><u>Empresa</u></h2>
 	
 	
 	<div class="btn-group" role="group" aria-label="pergunta10">
