--- a/cadastro.html
+++ b/cadastro.html
@@ -57,7 +57,7 @@
             <br>
         </div>
 
-        <form action="">
+        <form>
             <label for="name">
                 <span>Nome da Empresa</span>
                 <input type="text" id="name" name="name">
@@ -77,7 +77,7 @@
         </form>
 
         <div class="rodape space">
-            <div class="toproda" align="center">
+            <div class="toproda">
                 <div class="roda">
                     <h2>Redes Sociais</h2>
                     <img alt="Twitter" src="img/twiter.svg">
