--- a/cadastro.html
+++ b/cadastro.html
@@ -72,6 +72,22 @@
               <span>Celular: (com DDD)</span>
               <input type="tel" id="phone" name="phone" placeholder="(12) 34567-8912" pattern="([0-9]{2})[0-9]{5}-[0-9]{4}" required>
             </label>
+            
+            <label for="enderecoempresa">
+              <span>Endereço da Empresa</span>
+              <input type="text" id="enderecoempresa" name="enderecoempresa" placeholder="Rua e n°">
+            </label>
+
+            <label for="horariodefuncionamento">
+              <span>Horário de Funcionamento</span>
+              <input type="text" id="horariodefuncionamento" name="horariodefuncionamento" placeholder="Ex.: 12:34 - 23:45">
+            </label>
+
+            <label for="tipodeempresa">
+              <span>Setor</span>
+              <input type="text" id="tipodeempresa" name="tipodeempresa" placeholder="Ex.: Alimentação ou Vestiário.">
+            </label>
+
             <input type="submit" value="Cadastrar" id="button">
 
         </form>
