--- a/login.html
+++ b/login.html
@@ -56,13 +56,13 @@
             <br>
         </div>
 
-        <form action="">
+        <form>
             <label for="email">
                 <span>Email</span>
                 <input type="email" id="email" name="email">
             </label>
 
-            <label for="name">
+            <label for="password">
                 <span>Senha</span>
                 <input type="password" id="password" name="password">
             </label>
@@ -70,7 +70,7 @@
         </form>
 
         <div class="rodape space">
-            <div class="toproda" align="center">
+            <div class="toproda">
                 <div class="roda">
                     <h2>Redes Sociais</h2>
                     <img alt="Twitter" src="img/twiter.svg">
