--- a/como_funcionamos.html
+++ b/como_funcionamos.html
@@ -59,7 +59,7 @@
 
 			<div class = "funcionalidade">
 			<center>
-			<img src="img/funcoes.png">
+			<img alt="passo a passo" src="img/funcoes.png">
 			</center>			
 			</div>		
 			</div>
@@ -67,7 +67,7 @@
         </div>
 
         <div class="rodape space">
-            <div class="toproda" align="center">
+            <div class="toproda">
                 <div class="roda">
                     <h2>Redes Sociais</h2>
                     <img alt="Twitter" src="img/twiter.svg">
