--- a/faq.html
+++ b/faq.html
@@ -309,7 +309,7 @@
 			
         </div>
         <div class="rodape space">
-            <div class="toproda" align="center">
+            <div class="toproda">
                 <div class="roda">
                     <h2>Redes Sociais</h2>
                     <img alt="Twitter" src="img/twiter.svg">
@@ -321,9 +321,9 @@
                     <nav class="redes">
                       <h2>Navegação</h2>
                         <a href="menu.html">Menu</a><br>
-			<a href="como_funcionamos.html">Como funcionamos</a><br>
+						<a href="como_funcionamos.html">Como funcionamos</a><br>
                         <a href="faq.html">Perguntas frequentes</a><br>
-                        <a href="sobre_nos.html">Sobre nós</a><br>					
+                        <a href="sobre_nos.html">Sobre nós</a><br>
                         <a href="contatos.html">Contatos</a><br>
                     </nav>
                 </div>
