--- a/menu.html
+++ b/menu.html
@@ -52,7 +52,7 @@
         
         <div class="conteudo">
             <center>
-                <div id="carrossel" class="carousel carousel-fade slide col-10" data-ride="carousel">
+                <div id="carrossel1" class="carousel carousel-fade slide col-10" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img class="d-block w-100" src="img/lanche_1.jpg" alt="First slide">
@@ -85,16 +85,16 @@
 
         <div class="info space">
             <div class="hot_dog">
-                <img src="img/celular_sem_fundo.png">
+                <img alt="celular" src="img/celular_sem_fundo.png">
             </div>
-            <div class="text" align="right">
+            <div class="text">
               O objetivo desse website é disponibilizar os contatos de serviços de delivery próximos a você. Além disso, você ainda ajuda o comércio local! Sem risco de desatualização e sem taxas de utilização. Simples assim, rápido, fácil e gratuito!</div>
         </div>
 		
 		
 		<div class="conteudo">
             <center>
-                <div id="carrossel" class="carousel carousel-fade slide col-5" data-ride="carousel">
+                <div id="carrossel2" class="carousel carousel-fade slide col-5" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img class="d-block w-100" src="img/avaliacao_1.png" alt="First slide">
@@ -120,7 +120,7 @@
         </div>
 
         <div class="rodape space">
-            <div class="toproda" align="center">
+            <div class="toproda">
                 <div class="roda">
                     <h2>Redes Sociais</h2>
                     <img alt="Twitter" src="img/twiter.svg">
@@ -132,7 +132,7 @@
                     <nav class="redes">
                       <h2>Navegação</h2>
                         <a href="menu.html">Menu</a><br>
-			<a href="como_funcionamos.html">Como funcionamos</a><br>
+			                  <a href="como_funcionamos.html">Como funcionamos</a><br>
                         <a href="faq.html">Perguntas frequentes</a><br>
                         <a href="sobre_nos.html">Sobre nós</a><br>					
                         <a href="contatos.html">Contatos</a><br>
