--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>DelPhone</title>
+	<!-- CSS da página -->
         <link href="front_end/style.css" rel="stylesheet">
+	<!-- CSS do Bootstrap -->
         <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
         <link rel="sortcut icon" href="img/logotipo.png">
         <script src="jquery/jquery.min.js"></script>
@@ -14,15 +16,17 @@
     </head>
 
     <body>
-
+	<!-- Cabeçalho -->
         <div class="cabecalho">
             <div class="tiles">
               <div class="center">
                 <img alt="logotipo" src="img/DELPHONE.png">
                 <img alt="DelPhone" src="img/nome_sem_fundo.png"> 
+		<!-- Botão de Login -->
                 <a class="restrito" href="login.html"><img alt="cadeado" style="width: 40px" src="img/cadeado.svg"></a>             
               </div>
             </div>
+		<!-- Barra de navegação -->
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="menu.html">MENU</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +59,7 @@
 		<h1>Perguntas Frequentes</h1>
 		</center>
                 <h2><u>Cliente</u></h2>
-	
+	<!-- Botão collapse para exibir respostas -->
 	<div class="btn-group" role="group" aria-label="pergunta1">
 			
 		<h4> Como utilizar o DelPhone? &emsp;</h4> 
@@ -294,23 +298,12 @@
 		</div>
 		<br>
 		
-		
-		
-	
-	
-	
-	
-	
-	
-	
-	
-			
-		
-			
         </div>
+	<!-- Rodapé -->
         <div class="rodape space">
             <div class="toproda">
                 <div class="roda">
+		    <!-- Redes Sociais -->
                     <h2>Redes Sociais</h2>
                     <img alt="Twitter" src="img/twiter.svg">
                     <img alt="YouTube" src="img/youtube.svg">
@@ -318,10 +311,11 @@
                     <img alt="Instagram" src="img/instagram.svg">
                 </div>
                 <div class="roda">
+		    <!-- Navegação -->
                     <nav class="redes">
                       <h2>Navegação</h2>
                         <a href="menu.html">Menu</a><br>
-						<a href="como_funcionamos.html">Como funcionamos</a><br>
+			<a href="como_funcionamos.html">Como funcionamos</a><br>
                         <a href="faq.html">Perguntas frequentes</a><br>
                         <a href="sobre_nos.html">Sobre nós</a><br>
                         <a href="contatos.html">Contatos</a><br>
@@ -330,6 +324,7 @@
             </div>
     
             <hr>
+	    <!-- Copyright -->
             <div class="final">
                 @ 2021 DelPhone
             </div>
