--- a/como_funcionamos.html
+++ b/como_funcionamos.html
@@ -63,8 +63,9 @@
 
 			<div class = "row">
 
-			<div class = "funcionalidade">
+			<div>
 			<center>
+			<p>       </p>
 			<img alt="passo a passo" src="img/funcoes.png">
 			</center>			
 			</div>		
